feat: implement shared-folder sync, tracker resilience, and desktop UX
- Update FileCatalogue to use concurrent map of peer snapshots, deterministic search metadata selection, and alias retention.
- Reorder TrackerServer.handleClient finally block to remove catalogue snapshot before unregistering from registry.
- Implement SharedFolderIndexer with attribute caching, dirty generations, two-observation stability detection, and pre/post hash checks.
- Implement SharedFolderMonitor background watcher thread with NIO WatchService, event coalescing, and polling fallback.
- Implement PeerRuntime control executor, RuntimeSnapshot observer API, periodic discovery, and exponential backoff recovery loop.
- Decouple direct P2P transfers from tracker discovery outages, preserving cached peers for transfers and downloads.
- Add Local Sharing strip to MainFrame with read-only path, status, and Rescan shared folder action.
- Modernize Peers sidebar status, two-row search toolbar layout, and retained search results display during outages.
- Fix senderVal addition in SwingIncomingFilePrompt.
- Add unsaved settings draft loss protection in SettingsDialog and PeerApplication.
- Repair DesktopUiSmoke with zero synthetic clicks/fallbacks, real registered runtimes, real prompt acceptance, and all 11 update states.
- Update all affected project documentation and changelog.